--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,10 +3,11 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 ## Bluetooth settings
-CONFIG_ZMK_KEYBOARD_NAME="Corne LP"
+CONFIG_ZMK_KEYBOARD_NAME="Corne Tardis"
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_SLEEP=y
 
