--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -24,35 +24,28 @@
     combo_cut {
       timeout-ms = <50>;
       key-positions = <21 22>; // tap X and C to cut text
-      bindings = <&kp LG(X)>;
+      bindings = <&kp LCTRL(X)>;
       layers = <0>;
     };
 
     combo_copy {
       timeout-ms = <50>;
       key-positions = <22 23>; // tap C and V to copy text
-      bindings = <&kp LG(C)>;
+      bindings = <&kp LCTRL(C)>;
       layers = <0>;
     };
 
     combo_paste {
       timeout-ms = <50>;
       key-positions = <23 24>; // tap V and B to paste text
-      bindings = <&kp LG(V)>;
+      bindings = <&kp LCTRL(V)>;
       layers = <0>;
     };
 
     combo_save {
       timeout-ms = <50>;
       key-positions = <11 12>; // tap S and D to save file
-      bindings = <&kp LG(S)>;
-      layers = <0>;
-    };
-
-    combo_lockscreen {
-      timeout-ms = <50>;
-      key-positions = <0 1>; // tap Q and W to lock screen
-      bindings = <&kp LC(LG(Q))>;
+      bindings = <&kp LCTRL(S)>;
       layers = <0>;
     };
 
